--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,178 +7,7 @@
 @import "button";
 @import "cards";
 @import "search_bar";
+@import "footer";
+@import "gear_container";
 
 
-.gearbody{
-  padding-top: 85px;
-}
-
-.gear-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap; /* This allows wrapping to the next line if there is not enough space */
-  gap: 16px; /* Adjust the space between items */
-}
-
-.image-container {
-  position: relative;  /* This will allow the positioning of the <p> tag relative to this container */
-  width: 200px;         /* Set width as needed */
-  height: 200px;
-  max-width: 200px;    /* Set max width as needed */
-  display: flex;
-  // flex-direction: column;
-  justify-content: center; /* Center content vertically */
-  align-items: center;
-  transition: transform 0.3s ease;
-  border-radius: 50% !important;
-  margin-bottom: 50px;
-}
-
-.image-container:hover{
-  transform: scale(0.9);
-  cursor: pointer;
-}
-
-.image-front {
-  width: 100%;         /* Ensure the image takes up the full width of the container */
-  height: 100%;
-  object-fit: cover;        /* Maintain the aspect ratio of the image */
-}
-
-.overlay-text {
- position: absolute;/* Absolute positioning to place the text over the image */
-  top: 50%;            /* Position it in the middle vertically */
-  left: 50%;           /* Position it in the middle horizontally */
-  transform: translate(-50%, -50%); /* Adjust the position to truly center the text */
-  color: #ff8e2b;        /* Text color */
-  padding-top: 10px;       /* Add some padding around the text */
-  padding-left: 12px;
-  background: linear-gradient(to top, #071626, rgba(0, 0, 0, 0));
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100%;
-  font-weight: bolder;   /* Optional: Make the text bold */
-  border: 0;
-}
-
-.icon-group {
-  position: absolute;
-  top: 10px; /* Position from the bottom */
-  right: 10px; /* Position from the right */
-  display: flex;
-  gap: 10px;
-   padding: 10px;
-}
-
-.icon-group i {
-  color:#071626;
-  font-size: 1.5rem;
-  background-color: #ff8e2b;
-  border-radius: 50%;
-  padding: 5px;
-}
-
-.icon-group .suit-heart {
-  color: #fff;
-  font-size: 1.5rem;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  padding: 5px;
-}
-
-.dots-group {
-  position: absolute;
-  bottom: 10px; /* Position from the bottom */
-  left: 50%; /* Center horizontally */
-  transform: translateX(-50%); /* Adjust for exact center */
-  display: flex;
-  gap: 10px;
-}
-
-.dots-group .dot {
-  width: 5px;
-  height: 5px;
-  background-color: orange; /* Color of the dots */
-  border-radius: 50%; }
-
- .fantasy-address {
-  position: absolute;
-  // top: 100%; /* Start positioning right below the image container */
-  // bottom: 30px; /* Adjust position as needed */
-  left: 10px;
-  color: white;
-  font-size: 0.75rem;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
-  font-style: italic; /* Optional for styling */
-  // text-align: center; /* Center the address text */
-   margin-top: 280px; /* Add some space above the address */
-  // color: #333;
-  // font-size: 1rem;
-
-}
-
-.fantasy-address .star-icon {
-  color: orange; /* Color of the star icon */
-  font-size: 0.50rem; /* Make the star very small */
-  margin-left: 0px; /* Space between the star and the address */ }
-
-  .fantasy-address .rating {
-    font-size: 0.9rem; /* Adjust the size of the rating number */
-    margin-right: 15px; /* Space between the rating and the address */
-    color:#0056b3;/* Ensure the rating number is clearly visible */
-    font-weight: bolder;
-  }
-
- /* Footer Section */
-.footer {
-  background-color:#071626;
-  color: white;
-  text-align: center;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  // position: absolute;
-  // bottom: 0px;
-  // width: 100%;
-}
-
-.footer-section {
-  margin-bottom: 20px;
-}
-
-.footer-section h4 {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  color: orange;
-}
-
-.footer-section a {
-  color: orange;
-  margin: 0 10px;
-  text-decoration: none;
-}
-
-.footer-section a:hover {
-  color: #ff8e2b;
-}
-
-.footer-section .form-control {
-  margin-top: 10px;
-  padding: 5px;
-  width: 80%;
-}
-
-.footer-section .btn {
-  margin-top: 10px;
-  background-color: orange;
-  color: white;
-}
-
-.footer p {
-  margin: 0;
-  font-size: 1rem;
-}
